--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <!-- ================================================================ -->
         <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
+      <script src="assets/javascript/game.js"></script>
     <!-- ================================================================ -->
     <style>
       html,body{
@@ -91,172 +92,6 @@
   </div>
 
 
-  <!-- ============Firebase Authentication==================== -->
-
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyAq-2e_HExZ9tmixdKwAjK2AD4l-H98T-o",
-    authDomain: "rock-paper-scissors-6da24.firebaseapp.com",
-    databaseURL: "https://rock-paper-scissors-6da24.firebaseio.com",
-    projectId: "rock-paper-scissors-6da24",
-    storageBucket: "rock-paper-scissors-6da24.appspot.com",
-    messagingSenderId: "416436021142"
-  };
-  firebase.initializeApp(config);
-
-  var database = firebase.database();
-
-
-
-      $("#pOneButton").on("click",function(event){
-
-        event.preventDefault();
-
-     console.log("hello");
-
-     database.ref().update({
-    //
-      PlayerOne: {
-      Wins: 0,
-      Losses : 0,
-      Draws : 0,
-     pOnechoice: ""}
-
-     });
-
-     database.ref().on("child_added", function(snapshot) { // shows latest child added in the console
-         // storing the snapshot.val() in a variable for convenience
-         var snap = snapshot.val();
-
-         $("#playerOne").empty();
-         $("#playerOne").html('Name: ' + snap.name + '<br />' +
-                              'Wins: ' + snap.Wins + '<br />' +
-                              'Losses: ' + snap.Losses + '<br />' +
-                               'Draws: ' + snap.Draws + '<br />'
-             );
-
-
-             $("#playerOne").append(
-
-                     "<button value='Rock' class = 'pOneBtns'>Rock</button>" + "<br />" +
-                     "<button value='Paper' class = 'pOneBtns'>Paper</button>" + "<br />" +
-                     "<button value='Scissors' class = 'pOneBtns'>Scissors</button>" + "<br />" +
-                     "<button value='submit' class = 'pOneBtns'>Submit</button>"
-                 );
-
-
-
-   //
-
-   //
-   //       // Handle the errors
-       }, function(errorObject) {
-         // console.log("Errors handled: " + errorObject.code);
-       });
-
-
-});
-
-
-      $("#pTwoButton").on("click",function(event){
-
-        event.preventDefault();
-
-     console.log("hello");
-
-     database.ref().update({
-    //
-      PlayerTwo: {
-      Wins: 0,
-      Losses : 0,
-      Draws : 0 }
-
-     });
-
-     // ====================
-     database.ref().on("child_added", function(snapshot) { // shows latest child added in the console
-         // storing the snapshot.val() in a variable for convenience
-         var snap = snapshot.val();
-
-         $("#playerTwo").empty();
-         $("#playerTwo").html('Name: ' + snap.name + '<br />' +
-                              'Wins: ' + snap.Wins + '<br />' +
-                              'Losses: ' + snap.Losses + '<br />' +
-                               'Draws: ' + snap.Draws + '<br />'
-             );
-
-
-             $("#playerTwo").append(
-
-                     "<button value='Rock' class = 'pTwoBtns'>Rock</button>" + "<br />" +
-                     "<button value='Paper' class = 'pTwoBtns'>Paper</button>" + "<br />" +
-                     "<button value='Scissors' class = 'pTwoBtns'>Scissors</button>" + "<br />" +
-                     "<button value='submit' class = 'pTwoBtns'>Submit</button>"
-                 );
-         // ====================
-
-
-   //
-
-   //
-   //       // Handle the errors
-       }, function(errorObject) {
-         // console.log("Errors handled: " + errorObject.code);
-       });
-
-               // ====================
-
-});
-
-//
-//     // Firebase watcher .on("child_added"
-
-
-
-//
-//     database.ref().orderByChild("dateAdded").limitToLast(1).on("child-added",function(snapshot){
-//
-//
-//     });
-//
-$(document).on("click", ".pOneBtns", function() {
-
-
-
-
-      if($(this).val() === "Rock"){
-        database.ref().update({
-       //
-       PlayerOne: {
-       Wins: 0,
-       Losses : 0,
-       Draws : 0,
-       pOnechoice: "Rock"}
-
-
-
-        });
-        console.log('Rock');
-      }
-
-      if($(this).val() === "Paper"){
-        console.log('Paper');
-        database.ref().push({
-       //
-         pOnechoice: "Paper"
-
-        });
-      }
-
-      if($(this).val() === "Scissors"){
-        console.log('Scissors');
-      }
-
-
-});
-
-</script>
 
     </body>
 
