Some styling changes

--- a/index.html
+++ b/index.html
@@ -76,23 +76,27 @@
   <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Rock Paper Scissors</h1>
-          <p class="lead">This is a modified version of the Rock,Paper,Scissors Game to include Firebase!</p>
+          <p1>Lobby News:</p1><br />
+          <div id="updates">
+
+          </div>
+          <div id="annoyingPlayButtonsThatDontBehave"
+             <div class="enterBoxP1" >
+             <input id="playerOneInput" placeholder="Player One Name"/>
+             <button class="btn-primary enterGameButton" id="pOneButton">Click to Join</button>
+
+             </div>
+
+             <div class="enterBoxP2" >
+             <input id="playerTwoInput" placeholder="Player Two Name"/>
+             <button class="btn-primary enterGameButton" id="pTwoButton">Click to Join</button>
+             </div>
+
+           </div>
 
         </div>
   </div>
-  <div id="annoyingPlayButtonsThatDontBehave"
-     <div class="enterBoxP1" >
-     <input id="playerOneInput" placeholder="Player One Name"/>
-     <button class="btn-primary enterGameButton" id="pOneButton">Click to Join</button>
 
-     </div>
-
-     <div class="enterBoxP2" >
-     <input id="playerTwoInput" placeholder="Player Two Name"/>
-     <button class="btn-primary enterGameButton" id="pTwoButton">Click to Join</button>
-     </div>
-
-   </div>
   <!-- ============   Player Boxes   ==================== -->
 
   <div class="row" >
